argo/networkpolicy-argo-argocd-redis.yaml
# Source: argo
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argo
    app.kubernetes.io/component: redis
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.4.4
  name: argo-argocd-redis
  namespace: argo
  annotations:
    noa.re/deploy-id: 69c76c6a7861e127
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-server
          app.kubernetes.io/instance: argo
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-repo-server
          app.kubernetes.io/instance: argo
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-application-controller
          app.kubernetes.io/instance: argo
    ports:
    - port: redis
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
      app.kubernetes.io/instance: argo
  policyTypes:
  - Ingress
